--- a/css/style.css
+++ b/css/style.css
@@ -318,14 +318,18 @@ li {
   width: 100%;
   letter-spacing: 1px;
   line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 } 
 .mySlides-text {
     font-size: 35px;
   font-weight: bold;
 }
 .glovo {
-  max-width: 200px;
+  max-width: 300px;
   width: 100%;
+  height: 100%;
 }
 
 .active,
